Migração para single table inheritance concluída